WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152915
Nullopt and InPlace should be structs, not enum values
https://bugs.webkit.org/show_bug.cgi?id=152915
Summary
Nullopt and InPlace should be structs, not enum values
Anders Carlsson
Reported
2016-01-08 11:48:57 PST
Nullopt and InPlace should be structs, not enum values
Attachments
Patch
(5.69 KB, patch)
2016-01-08 11:57 PST
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-01-08 11:57:23 PST
Created
attachment 268566
[details]
Patch
WebKit Commit Bot
Comment 2
2016-01-08 11:59:07 PST
Attachment 268566
[details]
did not pass style-queue: ERROR: Source/WTF/wtf/StdLibExtras.h:362: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2016-01-08 13:10:12 PST
Comment on
attachment 268566
[details]
Patch igp;r=me
Anders Carlsson
Comment 4
2016-01-08 13:33:08 PST
Committed
r194784
: <
http://trac.webkit.org/changeset/194784
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug